--- a/Ultimate_Technologies_Challenge/Ultimate_Technology.ipynb
+++ b/Ultimate_Technologies_Challenge/Ultimate_Technology.ipynb
@@ -5,7 +5,7 @@
    "id": "bd2733ff",
    "metadata": {},
    "source": [
-    "# Ultimate Technologies Project - Interview Challenge\n",
+    "# Ultimate Technologies Project\n",
     "***"
    ]
   },
